<resources>
    <string name="app_name">PokeCats</string>
    <string name="btnSpace">50dp</string>
    <string name="bgMusic">背景音乐：</string>
    <string name="sounds">音效：</string>
    <string name="infiniteMode">无限模式</string>
    <string name="setting">设置</string>
    <string name="scoreboard">积分榜</string>
    <string name="exit">退出</string>
    <string name="startGame">开始游戏</string>
    <string name="No1">No.1：</string>
    <string name="No2">No.2：</string>
    <string name="No3">No.3：</string>
    <string name="score">得分：</string>
    <string name="restart">再来一局</string>
    <string name="end">歇会儿</string>
    <string name="introduction">游戏介绍</string>
    <string name="cat1Introduction">稳重的新加坡猫，捉到加一分。</string>
    <string name="cat2Introduction">可靠的俄罗斯蓝猫，捉到加三分。</string>
    <string name="cat3Introduction">淘气的曼切堪猫，捉到加五分。</string>
    <string name="cat4Introduction">作者：李奕君。热爱编程的稀有猫，捉到生命值加一。</string>
    <string name="bombIntroduction">炸弹，捉到生命值减一。</string>
    <string name="bonusIntroduction">连续捉到同一种猫有额外分数加成！</string>
    <string name="passMode">闯关模式</string>
    <string name="resetScoreboard">您确定要重置积分榜吗？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="reset">重置</string>
    <string name="theEnd">恭喜您通过重重考验，成为一位优秀的撸猫达人！</string>
</resources>
