<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:id="@+id/settingLayout">

    <com.example.acer_pc.pokecats.gamedemo.StrokeTextView
        android:id="@+id/tvNo1"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:gravity="center_vertical|left"
        android:text="@string/No1"
        android:textColor="#EA5246"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        />
    <com.example.acer_pc.pokecats.gamedemo.StrokeTextView
        android:id="@+id/tvNo2"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_below="@id/tvNo1"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:gravity="center_vertical|left"
        android:text="@string/No2"
        android:textColor="#EA5246"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        />
    <com.example.acer_pc.pokecats.gamedemo.StrokeTextView
        android:id="@+id/tvNo3"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_below="@id/tvNo2"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:gravity="center_vertical|left"
        android:text="@string/No3"
        android:textColor="#EA5246"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        />

</RelativeLayout>