<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="220dp"
    android:layout_height="105dp"
    android:background="@drawable/alert_background"
    >
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/pass"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"/>
    <com.example.acer_pc.pokecats.gamedemo.StrokeTextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/score"
        android:textSize="15sp"
        android:textColor="#EA5246"
        android:textStyle="bold|italic"
        android:gravity="center_vertical|left"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        />
    <Button
        android:id="@+id/btnStart"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_background"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:layout_marginTop="92dp"
        android:textColor="#000055"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:text="@string/restart"
        />
    <Button
        android:id="@+id/btnEnd"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_background"
        android:layout_alignTop="@+id/btnStart"
        android:layout_toLeftOf="@+id/btnStart"
        android:layout_marginRight="5dp"
        android:textColor="#000055"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:text="@string/end"
        />
</RelativeLayout>