<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:id="@+id/settingLayout">
    <ImageView
        android:id="@+id/ivIntroductionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/introduction_title" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ivIntroductionTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/tvCat1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/cat1_1" />
            <com.example.acer_pc.pokecats.gamedemo.StrokeTextView
                android:id="@+id/tvCat1Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/cat1Introduction"
                android:textSize="15sp"
                android:textColor="#EA5246"
                android:textStyle="bold|italic"
                android:gravity="center_vertical|left"
                android:layout_alignTop="@+id/tvCat1"
                android:layout_toRightOf="@+id/tvCat1"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/tvCat2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvCat1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/cat2_1" />
            <com.example.acer_pc.pokecats.gamedemo.StrokeTextView
                android:id="@+id/tvCat2Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/cat2Introduction"
                android:textSize="15sp"
                android:textColor="#EA5246"
                android:textStyle="bold|italic"
                android:gravity="center_vertical|left"
                android:layout_alignTop="@+id/tvCat2"
                android:layout_toRightOf="@+id/tvCat2"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/tvCat3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvCat2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/cat3_4" />
            <com.example.acer_pc.pokecats.gamedemo.StrokeTextView
                android:id="@+id/tvCat3Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/cat3Introduction"
                android:textSize="15sp"
                android:textColor="#EA5246"
                android:textStyle="bold|italic"
                android:gravity="center_vertical|left"
                android:layout_alignTop="@+id/tvCat3"
                android:layout_toRightOf="@+id/tvCat3"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/tvBomb"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvCat3"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bomb" />
            <com.example.acer_pc.pokecats.gamedemo.StrokeTextView
                android:id="@+id/tvBombInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/bombIntroduction"
                android:textSize="15sp"
                android:textColor="#EA5246"
                android:textStyle="bold|italic"
                android:gravity="center_vertical|left"
                android:layout_alignTop="@+id/tvBomb"
                android:layout_toRightOf="@+id/tvBomb"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                />
            <com.example.acer_pc.pokecats.gamedemo.StrokeTextView
                android:id="@+id/tvBonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/bonusIntroduction"
                android:textSize="15sp"
                android:textColor="#EA5246"
                android:textStyle="bold|italic"
                android:gravity="center_vertical|left"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvBomb"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>